clients/website/src/css/site.scss
@import "./colors";
@import "./mixins";
@import "./reset";
@import "./variables";
@import "./components";

:root {
  // Colors
  --skyblue: oklch(81.5% 0.082 225.5);
  --skyblue-contrast: oklch(37.5% 0.082 45.5);
  // Gradients & Shadows
  --gray-gradient: rgba(lightgray, 50%), #fff;
  --box-shadow-lowest: 0 2px 4px rgba($shadowGray, 33%);
  --box-shadow:
    0 2px 6px rgba($shadowGray, 25%),
    0 8px 24px rgba($shadowGray, 33%);
  --box-shadow-highest:
    0 2px 6px rgba($shadowGray, 25%),
    0 8px 24px rgba($shadowGray, 33%),
    0 16px 32px rgba($shadowGray, 33%);
}

html, body {
  margin: 0;
  height: 100%;
}

body {
  /* See https://css-tricks.com/snippets/css/system-font-stack/ */
  font-family: system-ui, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  color: var(--black);
  height: auto;
  min-height: 100vh;
  overscroll-behavior-x: none;

  @media (max-width: 720px) {
	  font-size: 18px;
  }
}

a {
  color: var(--link);

  &:focus {
    outline: 2px var(--link-outline) solid;
    border-radius: 2px;
    outline-offset: 1px;
  }
}

a, button, button:focus, input {
  outline-color: var(--link-outline);

  &:has(.icon:first-child:last-child):not(.btn-close) {
    color: inherit;
    line-height: 1;

    &:hover {
      color: var(--link);
      text-decoration: none;
      outline: none;
    }
  }
}

.flex {
  flex: 1;
}

.icon {
  display: flex;
  min-width: 24px;
  min-height: 24px;
  justify-content: center;
  align-items: center;
}

header.nav {
  display: flex;
  align-items: center;
  position: sticky;
  top: 0;
  padding-block-start: 8px;
  padding-inline: 8px;
  box-shadow: var(--box-shadow-lowest);
  transition: box-shadow 0.25s ease;
  @include backdrop-blur();
  @include on-top();

  &.pinned-to-viewport {
    padding-block-start: 8px + 1px;
  }

  .logo {
    display: flex;
    align-items: center;
    align-self: end;
    margin-inline-end: 24px;
    border-bottom: none;

    &, &:hover, &:focus {
      color: inherit;
      @include underline-link();
    }

    img {
      max-width: unset;
      border-radius: 0;
      filter: drop-shadow(0 0 4px gray);
      overflow: hidden;
    }

    img + * {
      margin-inline-start: 8px;
    }
  }

  a.sr-only.shown-on-focus {
    top: $headerHeight + 4px;
    left: -4px;
    background: white;
    z-index: 20;
  }

  a {
    color: inherit;

    &.shown-on-focus:focus {
      margin-inline-start: 8px;
      font-size: inherit;
      text-decoration: none;
    }
  }
  a:not(.logo):not(.sr-only):not(:has(.icon:first-child:last-child)) {
    font-weight: 500;
    @include underline-link();
  }
  a:has(.icon) {
    align-self: center;

    &:hover, &:focus {
      color: var(--link);
      outline-offset: 2px;
    }

    &:has(.icon.fas) {
      font-size: 16px;
    }
    &:has(.icon.devicons) {
      font-size: 24px;
    }
  }
  a:has(.icon:first-child:last-child) {
    border-radius: 50%;
  }

  nav {
    display: flex;
    align-self: stretch;
    align-items: center;
    gap: 1rem;
  }
}

main {
  flex: 1;
  z-index: 0;
}

main #disclaimer {
  margin-block: 0 14px;
  margin-inline: 0;
  padding-inline: 10px;

  .btn.btn-close {
    margin-inline-end: 4px;
  }
}

.jumbotron {
  @include content-container($responsive-margin: 12px);
}
// Ensure the jumbotron is properly spaced when the alert is not present.
main > noscript + script + .jumbotron {
  margin-block-start: 16px;
}
.jumbotron h1, .jumbotron p {
  display: inline;
}
.jumbotron h1 {
  white-space: nowrap;
  width: min-content;

  @media (max-width: $breakpointMobile) {
    font-size: 28px;
  }
}
.jumbotron p {
  @media (max-width: $breakpointMobile) {
    white-space: normal;
  }
}
.jumbotron .btn.call-to-action {
  align-self: end;
}

main > section {
  margin-inline: 20px;

  &.container {
    @include content-container();
  }
}

section.features.container {
  @media (max-width: $breakpointMobile) {
    padding-inline: 14px;
  }
}
section.features {
  font-size: 16px;
}
ul:has(.feature.card) {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  justify-content: center;
  gap: 1rem;
  padding: 0;

  $columns: 2;
  $totalColumns: $columns * 2;
	$span: calc($totalColumns / $columns);
	$nth-child: if($columns % 2 == 0, 'odd', 'even');
  & > * {
    grid-column: auto;
    align-items: center;

    @media (min-width: $breakpointMobile) {
      // Center the last item if it's alone
  		&:last-child:nth-child(#{$nth-child}) {
  			grid-column: auto / span $span;
        justify-self: center;
        max-width: max-content;
  		}
    }
	}

  // Nested lists
  ul {
    list-style-type: disc;
    padding-inline-start: 16px;
  }
}
section.features ul .feature.c2a {
  align-self: center;
}

footer {
  display: flex;
  justify-content: space-between;
  margin-block-start: 8px;
  margin-inline: 12px;
  padding-block: 0 12px;

  p {
    font-size: small;
    margin: 0;

    :dir(ltr) &:last-child {
      text-align: right;
    }
    :dir(rtl) &:last-child {
      text-align: left;
    }
  }

  @media (max-width: $breakpointMobile) {
    flex-wrap: wrap;
  }
}

@import "./social";

